--- a/css/site.css
+++ b/css/site.css
@@ -36,12 +36,12 @@ footer {
 
 #sun {
   position: absolute;
-  z-index: 1;
+  z-index: -1;
 }
 
 #moon {
   position: absolute;
-  z-index: -1;
+  z-index: 1;
 }
 
 /*Animations*/
@@ -125,5 +125,17 @@ pre[class*="language-"] {
 @media (prefers-reduced-motion) {
   .hidden {
     transition: none;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .navbar-collapse {
+    border-style: solid;
+    height: 150px;
+  }
+
+  .navbar-collapse .hid {
+    opacity: 0;
+    pointer-events: none;
   }
 }
